# scurry

config/elvish/: rc.elv
go/pkg/restbuilder/: resource.go
notes/: mtg-cards-to-buy.txt
python/: .coveragerc  .gitignore  Taskfile.yml  pylama.ini  pyproject.toml
python/.task/checksum/: test
python/scurry/: cliform.py  ftag.py  ftag_test.py  log.py  octoprint.py  octoprint_test.py  prompt.py
python/scurry/magix/: spell.py
python/scurry/magix/db/: models.py
python/scurry/mtg/: engine.py  spell.py
python/scurry/muninn/: config.py  config_test.py
python/scurry/muninn/models/: __init__.py
python/scurry/muninn/models/migrations/: env.py
python/scurry/muninn/models/migrations/versions/: 2b5f38f736ed_snapshot.py  b46897eb75f8_init.py
python/scurry/muninn/runner/: runner.py  worker.py
python/scurry/muninn/schedule/: __init__.py
python/scurry/muninn/server/: __init__.py
python/scurry/muninn/when/: __init__.py
python/scurry/mycroft/skills/: README.md  __init__.py
python/scurry/mycroft/skills/locale/en-us/: muninn.intent
python/scurry/net/: ping.py  ping_test.py
python/scurry/structio/: __init__.py  field.py  field_test.py  loader.py  loader_test.py  value.py
web/muninn/: package.json
