[tool.poetry]
name = "scurry"
version = "0.0.1"
description = ""
authors = ["Seth Curry <seth@scurry.io>"]

[tool.poetry.dependencies]
python = "^3.8"
structlog = "^20.2.0"
requests = "^2.25.1"
celery = "^5.0.5"
sqlalchemy = "^1.3.22"
fastapi = "^0.63.0"
pyyaml = "^5.4.1"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
pylama = "^7.7.1"
pylint = "^2.6.0"
mypy = "^0.800"
sqlalchemy-stubs = "^0.4"
pdoc = "^3.0.1"
coverage = "^5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
